--- a/composer.json
+++ b/composer.json
@@ -15,7 +15,9 @@
         "laravel/framework": "^8.12",
         "laravel/sanctum": "^2.9",
         "laravel/tinker": "^2.5",
-        "predis/predis": "^1.1"
+        "predis/predis": "^1.1",
+        "spatie/laravel-medialibrary": "^9.0.0",
+        "tailflow/laravel-orion": "^1.2"
     },
     "require-dev": {
         "facade/ignition": "^2.5",
