--- a/composer.json
+++ b/composer.json
@@ -16,9 +16,9 @@
         "laravel/sail": "^1.4",
         "laravel/sanctum": "^2.9",
         "laravel/tinker": "^2.5",
+        "league/flysystem-aws-s3-v3": "~1.0",
         "predis/predis": "^1.1",
-        "spatie/laravel-medialibrary": "^9.0.0",
-        "tailflow/laravel-orion": "^1.2"
+        "spatie/laravel-medialibrary": "^9.0.0"
     },
     "require-dev": {
         "barryvdh/laravel-ide-helper": "^2.9",
