--- a/composer.json
+++ b/composer.json
@@ -19,7 +19,8 @@
         "league/flysystem-aws-s3-v3": "~1.0",
         "predis/predis": "^1.1",
         "spatie/laravel-medialibrary": "^9.0.0",
-        "spekulatius/phpscraper": "^0.5.0"
+        "spekulatius/phpscraper": "^0.5.0",
+        "symfony/polyfill-php80": "^1.23"
     },
     "require-dev": {
         "barryvdh/laravel-ide-helper": "^2.9",
