--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,13 +3,14 @@ version: '3'
 services:
     laravel.test:
         build:
-            context: ./vendor/laravel/sail/runtimes/8.0
+            context: ./docker/8.0
             dockerfile: Dockerfile
             args:
                 WWWGROUP: '${WWWGROUP}'
         image: sail-8.0/app
         ports:
             - '${APP_PORT:-80}:80'
+            - '8000:8000'
         environment:
             WWWUSER: '${WWWUSER}'
             LARAVEL_SAIL: 1
